# Bunny-Hop-Engine

./: .gitignore  .gitmodules  AnimationState.cpp  AnimationState.hpp  CMakeLists.txt  Delegate.hpp  Drawable.cpp  Drawable.h  Drawable.hpp  Entity.cpp  Entity.h  Entity.hpp  GameScene.cpp  GameScene.h  GameScene.hpp  Json_Parser.cpp  Json_Parser.hpp  Parallax.cpp  Parallax.h  Parallax.hpp  Player.cpp  Player.hpp  Print_helper.hpp  README.md  State_Machine.h  SystemEvent.cpp  SystemEvent.hpp  TextureManager.cpp  TextureManager.h  TextureManager.hpp  delegate.hpp  drawable.cpp  drawable.hpp  entity.cpp  entity.hpp  gameScene.cpp  gameScene.hpp  main.cpp  movement.cpp  movement.hpp  (+6 more)
Entity/: Test.json
Player/: Player.json
Scenes/: TestScene.json
Settings/: Controls.json
src/BHE/: Json_Parser.cpp  Json_Parser.hpp  Print_helper.hpp  SystemEvent.hpp  delegate.hpp  drawable.cpp  drawable.hpp  entity.cpp  entity.hpp  gameScene.cpp  gameScene.hpp  main.cpp  movement.cpp  movement.hpp  parallax.cpp  pipeline.hpp  player.cpp  textureManager.hpp
src/MT/: State_Machine.cpp  SystemEvent.hpp  animationState.hpp  delegate.hpp  drawable.cpp  drawable.hpp  entity.cpp  entity.hpp  main.cpp  player.cpp  player.hpp  textureManager.hpp
src/bhe_core/: Functional_Events.h  Json_Parser.cpp  Json_Parser.hpp  Print_helper.hpp  Return_Status.hpp  State_Machine.cpp  State_Machine.h  State_Machine.hpp  SystemEvent.cpp  SystemEvent.hpp  animationState.cpp  animationState.hpp  delegate.hpp  delta_time.cpp  delta_time.hpp  drawable.cpp  drawable.hpp  entity.cpp  entity.hpp  gameScene.cpp  gameScene.hpp  movement.cpp  movement.hpp  parallax.cpp  parallax.hpp  pipeline.hpp  player.cpp  player.hpp  systemEvent.cpp  systemEvent.hpp  textureManager.cpp  textureManager.hpp
src/bhe_designer/: CMakeLists.txt  basePannel.cpp  basePannel.hpp  baseWindowElement.cpp  baseWindowElement.hpp  designerWindow.cpp  designerWindow.h  designer_main.cpp  designer_menu.cpp  designer_menu.hpp  designer_pallet.cpp  designer_pallet.hpp  designer_window.cpp  designer_window.h  gui_helpers.cpp  gui_helpers.hpp  gui_modes.cpp  gui_modes.hpp  pallet_pannel.cpp  pallet_pannel.hpp  scene_designer.cpp  scene_designer.hpp  windowManager.cpp  windowManager.hpp
src/bhe_engine/: CMakeLists.txt  engine_main.cpp
src/bhe_tests/: CMakeLists.txt  test_ReturnStatus.cpp  test_State_Machine.cpp  test_animationState.cpp  test_delegate.cpp  test_delta_time.cpp  test_drawable.cpp  test_entity.cpp  test_main.cpp  test_pipeline.cpp
src/cmake_refactor/: main.cpp
src/tests/: test_animation_state.cpp  test_animation_state.hpp  test_delegate.cpp  test_drawable.cpp  test_pipeline.cpp
thrid_party/: CMakeLists.txt
